<resources>
    <string name="app_name">Stock Photo</string>
    <string name="item_photo_content_description">Photo</string>

    <!-- HOME FRAGMENT -->
    <string name="home_header_title">Free Stock Photos</string>
    <string name="home_header_subtitle">provided by <u>Pexels</u></string>
    <string name="home_header_image_description">Pexel\'s logo</string>
    <string name="home_error">Something went wrong.</string>
    <string name="home_error_action">Touch here to <u>try again</u>.</string>
    <string name="home_error_snack_bar">An error has occurred.</string>
    <string name="home_error_snack_bar_button">Try again</string>
    <string name="home_error_image_description">Error icon</string>

    <!-- SEARCH FRAGMENT -->
    <string name="search_text_title">Looking for something?</string>
    <string name="search_bar_hint">Search for photos</string>
    <string name="search_number_of_results">%1$d results found</string>
    <string name="search_singular_number_of_results">%1$d result found</string>
    <string name="search_max_number_of_results">%1$d+ results found</string>
    <string name="search_text_subtitle">Use the search bar to browse through thousands of photos.</string>
    <string name="search_no_results_title">No results found…</string>
    <string name="search_no_results_subtitle">No results were found for this query.\nTry something else.</string>
    <string name="search_button_text">Go</string>

    <!-- FULL SCREEN PHOTO VIEW -->
    <string name="photo_top_layout_text">Details</string>
    <string name="photo_image_view_back_description">Back button</string>
    <string name="photo_image_view_save_description">Save photo button</string>
    <string name="photo_saved_file_name">PEXELS-%1$d.jpeg</string>
    <string name="photo_saved_success">Photo saved in gallery.</string>
    <string name="photo_saved_failure">The photo could not be saved.</string>
    <string name="photo_snack_bar_hide">Hide</string>
</resources>