<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="@string/home_error_image_description"
        android:src="@drawable/ic_home_error" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/avenir_lt_pro_medium"
        android:text="@string/home_error"
        android:textAlignment="center"
        android:textSize="18sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:drawablePadding="8dp"
        android:fontFamily="@font/avenir_lt_pro_light"
        android:text="@string/home_error_action"
        android:textAlignment="center"
        android:textSize="14sp"
        app:drawableBottomCompat="@drawable/ic_refresh" />

</LinearLayout>