<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="160dp"
    android:gravity="center_horizontal">

    <ImageView
        android:id="@+id/image_view_header"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:alpha="1"
        android:background="@drawable/shape_round_outline"
        android:src="@drawable/ic_pexels_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_gravity="center_vertical|end"
        android:contentDescription="@string/home_header_image_description" />

    <LinearLayout
        android:layout_gravity="center_vertical|start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_view_title"
            android:layout_width="85dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/avenir_lt_pro_black"
            android:lineSpacingMultiplier="0.90"
            android:text="@string/home_header_title"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/space"
            app:layout_constraintTop_toTopOf="@id/image_view_header" />

        <TextView
            android:id="@+id/text_view_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/avenir_lt_pro_medium"
            android:text="@string/home_header_subtitle"
            android:textColor="@color/black"
            android:textSize="11sp"
            app:layout_constraintStart_toStartOf="@id/text_view_title"
            app:layout_constraintTop_toBottomOf="@id/text_view_title"
            tools:ignore="SmallSp" />

    </LinearLayout>

</LinearLayout>