<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparentBlack1">

    <com.ortiz.touchview.TouchImageView
        android:id="@+id/image_view_full_screen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:id="@+id/frame_layout_top"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/transparentBlack2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/avenir_lt_pro_medium"
            android:gravity="center"
            android:text="@string/photo_top_layout_text"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/button_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:paddingHorizontal="20dp"
            android:paddingVertical="10dp"
            android:background="?selectableItemBackground"
            android:contentDescription="@string/photo_image_view_back_description"
            android:src="@drawable/ic_back_arrow"
            tools:ignore="UnusedAttribute" />

    </FrameLayout>

    <RelativeLayout
        android:id="@+id/relative_layout_bottom"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/transparentBlack2"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/text_view_photographer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@id/button_save_photo"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginHorizontal="20dp"
            android:drawablePadding="10dp"
            android:ellipsize="end"
            android:fontFamily="@font/avenir_lt_pro_light"
            android:gravity="center_vertical"
            android:maxLines="1"
            android:paddingEnd="20dp"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:drawableStartCompat="@drawable/ic_person"
            tools:ignore="RtlSymmetry" />

        <ImageView
            android:id="@+id/button_save_photo"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical"
            android:layout_marginHorizontal="20dp"
            android:contentDescription="@string/photo_image_view_save_description"
            android:fontFamily="@font/avenir_lt_pro_medium"
            android:foreground="?selectableItemBackground"
            android:src="@drawable/ic_save"
            android:textColor="@color/white"
            tools:ignore="UnusedAttribute" />

    </RelativeLayout>

    <ProgressBar
        android:id="@+id/progress_bar_center"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_gravity="center"
        android:indeterminate="true"
        android:indeterminateTint="@color/lightGray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_view_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/avenir_lt_pro_medium"
        android:text="@string/home_error"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>